--- a/home.css
+++ b/home.css
@@ -155,11 +155,11 @@ svg{
         opacity: 1;
     }
 }
-.text{
+#text{
     color: white;
     font-size: 2.5em;
 }
-.text a{
+#text a{
     display: inline-block;
     padding: 10px 15px;
     background-color: white;
